Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640">
+
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Github is pretty gosh darn cool by cfreeley</title>
+  </head>
+
+  <body>
+    <a id="forkme_banner" href="https://github.com/cfreeley">View on GitHub</a>
+    <div class="shell">
+
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Github is pretty gosh darn cool</h1>
+            <h2>&quot;If the glove fits, you must commit&quot;</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
+
+      <div id="no-downloads">
+        <span class="inner">
+        </span>
+      </div>
+
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
+        <h3>
+<a id="wow" class="anchor" href="#wow" aria-hidden="true"><span class="octicon octicon-link"></span></a>Wow</h3>
+
+<p>Thanks Github.</p>
+
+<p>Hey, is that a code block?</p>
+
+<pre><code>$ osascript -e 'set volume 4'
+$ ls ~/Desktop | say
+</code></pre>
+
+<p>Gosh, I'm like a hacker now. Neato</p>
+
+<h3>
+<a id="this-isnt-a-geocity" class="anchor" href="#this-isnt-a-geocity" aria-hidden="true"><span class="octicon octicon-link"></span></a>This isn't a GeoCity</h3>
+
+<p>This is a GeoEmpire</p>
+
+<h3>
+<a id="i-am-madly-in-love-with" class="anchor" href="#i-am-madly-in-love-with" aria-hidden="true"><span class="octicon octicon-link"></span></a>I am madly in love with</h3>
+
+<p>Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>).</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Don't.</p>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>Projects by <a href="https://github.com/cfreeley">cfreeley</a> can be found on <a href="https://github.com/cfreeley">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
+    </div>
+
+    
+  </body>
+</html>
